--- a/Laisomhocduong.html
+++ b/Laisomhocduong.html
@@ -217,7 +217,7 @@
 <body>
     <!-- Chat Zalo -->
     <div id="zalo-chat-btn" class="zalo-chat-btn">
-        <img src="../image/icon_zalo.svg" alt="Chat Zalo">
+        <img src="image/icon_zalo.svg" alt="Chat Zalo">
         <span>Chat với tôi</span>
     </div>
     <script>
@@ -255,7 +255,7 @@
             <div class="navbar-header">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="../image/logo.png" alt="Logo thương hiệu Taylaimoi.com" class="logo-img">
+                        <img src="image/logo.png" alt="Logo thương hiệu Taylaimoi.com" class="logo-img">
                     </a>
                 </div>
                 <div class="menu-toggle" id="menuToggle">
@@ -486,16 +486,16 @@
             <p><strong>www.Taylaimoi.com</strong></p>
             <p>Địa chỉ: 143 Trần Phú, Phường Hà Đông, TP.Hà Nội</p>
             <a href="https://www.facebook.com/taylaimoi2266 " class="fb-button " target="_blank " title="Chat Facebook " style="color:white; padding: 10px; font-size: 14px; ">
-                <img src="../image/icons8_facebook.svg " style="width: 24px; height: 24px " alt="Chat Facebook "> Facebook Taylaimoi
+                <img src="image/icons8_facebook.svg " style="width: 24px; height: 24px " alt="Chat Facebook "> Facebook Taylaimoi
             </a>
             <a href="https://zalo.me/0989465167 " class="zalo-button " target="_blank " title="Chat Zalo " style="color:white ;padding: 10px; font-size: 14px; ">
-                <img src="../image/icons8_zalo.svg " style="width: 24px; height: 24px; " alt="Chat Zalo "> Zalo Tiếp nhận hồ sơ
+                <img src="image/icons8_zalo.svg " style="width: 24px; height: 24px; " alt="Chat Zalo "> Zalo Tiếp nhận hồ sơ
             </a>
             <a href="https://www.tiktok.com/@kenhtaylaimoi.com " class="youtube-button " target="_blank " title="Xem Video " style="color:white ;padding: 10px; font-size: 14px; ">
-                <img src="../image/icons8_tiktok.svg " style="width: 24px; height: 24px; " alt="Xem Video ">Tiktok Taylaimoi
+                <img src="image/icons8_tiktok.svg " style="width: 24px; height: 24px; " alt="Xem Video ">Tiktok Taylaimoi
             </a>
             <a href="https://www.youtube.com/@taylaimoi " class="youtube-button " target="_blank " title="Xem Video ">
-                <img src="../image/icons8_youtube.svg " alt="Xem Video "> Youtube Taylaimoi
+                <img src="image/icons8_youtube.svg " alt="Xem Video "> Youtube Taylaimoi
             </a>
             <p>Hotline: 09.8888.2266 | Email: Taylaimoi2266@gmail.com</p>
             <div class="sub-text "> (©) Bản quyền của thương hiệu Taylaimoi.com | Thiết kế bởi letuantbvn </div>
