--- a/Laisomhocduong.html
+++ b/Laisomhocduong.html
@@ -453,25 +453,25 @@
             <div class="marquee-container ">
                 <div class="marquee-track ">
                     <div class="partner-logo ">
-                        <img src="../image/Logo/FPT-logo.png " alt="Partner 1 ">
+                        <img src="image/Logo/FPT-logo.png " alt="Partner 1 ">
                     </div>
                     <div class="partner-logo ">
-                        <img src="../image/Logo/Daidung-logo.png " alt="Partner Đại Dũng ">
+                        <img src="image/Logo/Daidung-logo.png " alt="Partner Đại Dũng ">
                     </div>
                     <div class="partner-logo ">
-                        <img src="../image/Logo/taylaimoi-logo.png " alt="Partner 3 ">
+                        <img src="image/Logo/taylaimoi-logo.png " alt="Partner 3 ">
                     </div>
                     <div class="partner-logo ">
-                        <img src="../image/Logo/Vinfast-logo.png " alt="Partner 2 ">
+                        <img src="image/Logo/Vinfast-logo.png " alt="Partner 2 ">
                     </div>
                     <div class="partner-logo ">
-                        <img src="../image/Logo/FPT-logo.png " alt="Partner 1 ">
+                        <img src="image/Logo/FPT-logo.png " alt="Partner 1 ">
                     </div>
                     <div class="partner-logo ">
-                        <img src="../image/Logo/taylaimoi-logo.png " alt="Partner 3 ">
+                        <img src="image/Logo/taylaimoi-logo.png " alt="Partner 3 ">
                     </div>
                     <div class="partner-logo ">
-                        <img src="../image/Logo/Vinfast-logo.png " alt="Partner 2 ">
+                        <img src="image/Logo/Vinfast-logo.png " alt="Partner 2 ">
                     </div>
                 </div>
             </div>
