Update code background Noel

--- a/Laisomhocduong.html
+++ b/Laisomhocduong.html
@@ -653,6 +653,8 @@
             }, 6000);
         });
     </script>
+    <!-- Background Noel -->
+    <script type="text/javascript" src="../assets/snow.js"></script>
 </body>
 
 </html>
