--- a/Video.html
+++ b/Video.html
@@ -740,6 +740,8 @@
             }
         });
     </script>
+    <!-- Background Noel -->
+    <script type="text/javascript" src="../assets/snow.js"></script>
 </body>
 
 </html>
