--- a/Gallery.html
+++ b/Gallery.html
@@ -824,6 +824,8 @@
         });
     </script>
 
+    <!-- Background Noel -->
+    <script type="text/javascript" src="../assets/snow.js"></script>
 </body>
 
 </html>
