--- a/Meo.html
+++ b/Meo.html
@@ -618,7 +618,8 @@
         });
     </script>
 
-
+    <!-- Background Noel -->
+    <script type="text/javascript" src="../assets/snow.js"></script>
 
 </body>
 
