--- a/Sahinh.html
+++ b/Sahinh.html
@@ -759,6 +759,8 @@
         });
     </script>
 
+    <!-- Background Noel -->
+    <script type="text/javascript" src="../assets/snow.js"></script>
 
 </body>
 
