--- a/giaidap.html
+++ b/giaidap.html
@@ -551,6 +551,8 @@
             }
         });
     </script>
+    <!-- Background Noel -->
+    <script type="text/javascript" src="../assets/snow.js"></script>
 </body>
 
 </html>
