--- a/index.html
+++ b/index.html
@@ -1068,6 +1068,9 @@
             }
         });
     </script>
+    <!-- Background Noel -->
+    <script type="text/javascript" src="../assets/snow.js"></script>
+    <!-- <script type="text/javascript" src="https://tientv.com/hoa/hoa.js"></script> -->
 </body>
 
 </html>
