--- a/Teacher.html
+++ b/Teacher.html
@@ -249,7 +249,7 @@
 
                         <div class="form-row">
                             <div class="form-group half">
-                                <label class="form-label">Ngày bắt đầu học</label>
+                                <label class="form-label">Ngày học</label>
                                 <input type="date" class="form-input" name="startDate" required>
                             </div>
 
@@ -281,7 +281,7 @@
 
                         <div class="form-group">
                             <label class="form-label">Nhận xét</label>
-                            <textarea class="form-textarea" name="comment" placeholder="Chia sẻ cảm nhận của bạn về giảng viên..." required></textarea>
+                            <textarea class="form-textarea" name="comment" placeholder="Chia sẻ cảm nhận cách dạy của giảng viên về buổi học hôm nay và những mong muốn của bạn cho các buổi học sau, những vấn đề cần cải thiện..." required></textarea>
                         </div>
 
                         <div class="loading" id="formLoading">
@@ -308,7 +308,8 @@
                 <i class="fas fa-check-circle"></i>
             </div>
             <h3 class="modal-title">Đánh giá thành công!</h3>
-            <p class="modal-message">Cảm ơn bạn đã dành thời gian đánh giá giảng viên. Đánh giá của bạn đã được ghi nhận và sẽ hiển thị sau khi được kiểm duyệt.</p>
+            <p class="modal-message">Cảm ơn bạn đã dành thời gian đánh giá giảng viên. Đánh giá của bạn đã được ghi nhận và sẽ hiển thị sau khi được kiểm duyệt. Mọi thông tin cá nhân sẽ được mã hóa bảo mật an toàn và mọi vấn đề liên quan sẽ được xử lý nghiêm túc để xây dựng môi
+                trường dạy và học được đảm bảo chất lượng tốt nhất.</p>
             <button class="modal-close-btn" onclick="closeModal()">Đóng</button>
         </div>
     </div>
