--- a/Teacher.html
+++ b/Teacher.html
@@ -228,11 +228,10 @@
 
             <!-- Reviews Section -->
             <div class="reviews-section">
-                <h2 class="section-title">Đánh Giá Của Học Viên</h2>
+                <h2 class="section-title">Nhận Xét & Đánh Giá Từ Học Viên</h2>
 
                 <!-- Review Form -->
                 <div class="review-form">
-                    <h3>Đánh giá giảng viên</h3>
                     <!-- Phần form trong file HTML -->
                     <form id="reviewForm">
                         <div class="form-row">
