Update teacher DaoXuanViet

--- a/index.html
+++ b/index.html
@@ -1069,7 +1069,7 @@
         });
     </script>
     <!-- Background Noel -->
-    <script type="text/javascript" src="../assets/snow.js"></script>
+    <script type="text/javascript" src="assets/snow.js"></script>
     <!-- <script type="text/javascript" src="https://tientv.com/hoa/hoa.js"></script> -->
 </body>
 
