--- a/teacher/Dao-xuan-viet.html
+++ b/teacher/Dao-xuan-viet.html
@@ -123,8 +123,8 @@
                                 <i class="fas fa-map-marker-alt"></i>
                             </div>
                             <div class="contact-text">
-                                <div class="contact-label">Địa chỉ</div>
-                                <div class="contact-value">143 Trần Phú, Phường Hà Đông, TP.Hà Nội</div>
+                                <div class="contact-label">Địa chỉ chi nhánh</div>
+                                <div class="contact-value">212 tổ tám quyết thắng, Yên Nghĩa, Hà Đông, Hà Nội</div>
                             </div>
                         </div>
 
@@ -154,7 +154,7 @@
                             </div>
                             <div class="contact-text">
                                 <div class="contact-label">Chuyên môn</div>
-                                <div class="contact-value">Đào tạo lái xe hạng B, C, D</div>
+                                <div class="contact-value">Đào tạo lái xe hạng B, C</div>
                             </div>
                         </div>
 
@@ -164,7 +164,7 @@
                             </div>
                             <div class="contact-text">
                                 <div class="contact-label">Học viên đã đào tạo</div>
-                                <div class="contact-value">2,500+ học viên</div>
+                                <div class="contact-value">500+ học viên</div>
                             </div>
                         </div>
 
@@ -224,6 +224,17 @@
                         </div>
                     </div>
                 </div>
+                <!-- Lightbox Modal -->
+                <div id="lightboxModal" class="lightbox-modal">
+                    <span class="lightbox-close">&times;</span>
+                    <div class="lightbox-nav">
+                        <div class="lightbox-prev">&#10094;</div>
+                        <div class="lightbox-next">&#10095;</div>
+                    </div>
+                    <img class="lightbox-content" id="lightboxImg">
+                    <div class="lightbox-caption" id="lightboxCaption"></div>
+                </div>
+
             </div>
 
             <!-- Reviews Section -->
@@ -928,6 +939,110 @@
             }
 
             console.log('All components initialized successfully');
+        });
+    </script>
+
+    <!-- Thêm JavaScript cho Lightbox -->
+    <script>
+        // Lightbox functionality
+        function initializeLightbox() {
+            // Lấy modal
+            var lightboxModal = document.getElementById("lightboxModal");
+            // Lấy ảnh trong modal
+            var lightboxImg = document.getElementById("lightboxImg");
+            // Lấy caption
+            var lightboxCaption = document.getElementById("lightboxCaption");
+            // Lấy nút đóng
+            var lightboxClose = document.querySelector(".lightbox-close");
+            // Lấy nút điều hướng
+            var lightboxPrev = document.querySelector(".lightbox-prev");
+            var lightboxNext = document.querySelector(".lightbox-next");
+
+            // Lấy tất cả các ảnh trong gallery
+            var galleryImages = document.querySelectorAll(".gallery-img");
+            var currentImageIndex = 0;
+            var imagesArray = Array.from(galleryImages);
+
+            // Duyệt qua từng ảnh và gán sự kiện click
+            galleryImages.forEach(function(img, index) {
+                img.addEventListener("click", function() {
+                    currentImageIndex = index;
+                    openLightbox(this.src, this.alt);
+                });
+            });
+
+            // Hàm mở lightbox
+            function openLightbox(src, alt) {
+                lightboxModal.style.display = "block";
+                lightboxImg.src = src;
+                lightboxCaption.innerHTML = alt;
+
+                // Ẩn/hiện nút điều hướng nếu có 1 ảnh
+                if (imagesArray.length <= 1) {
+                    lightboxPrev.style.display = "none";
+                    lightboxNext.style.display = "none";
+                } else {
+                    lightboxPrev.style.display = "flex";
+                    lightboxNext.style.display = "flex";
+                }
+            }
+
+            // Hàm đóng lightbox
+            function closeLightbox() {
+                lightboxModal.style.display = "none";
+            }
+
+            // Hàm hiển thị ảnh tiếp theo
+            function showNextImage() {
+                currentImageIndex = (currentImageIndex + 1) % imagesArray.length;
+                var nextImg = imagesArray[currentImageIndex];
+                lightboxImg.src = nextImg.src;
+                lightboxCaption.innerHTML = nextImg.alt;
+            }
+
+            // Hàm hiển thị ảnh trước đó
+            function showPrevImage() {
+                currentImageIndex = (currentImageIndex - 1 + imagesArray.length) % imagesArray.length;
+                var prevImg = imagesArray[currentImageIndex];
+                lightboxImg.src = prevImg.src;
+                lightboxCaption.innerHTML = prevImg.alt;
+            }
+
+            // Khi click vào nút đóng, đóng modal
+            lightboxClose.addEventListener("click", closeLightbox);
+
+            // Khi click vào nút next
+            lightboxNext.addEventListener("click", showNextImage);
+
+            // Khi click vào nút prev
+            lightboxPrev.addEventListener("click", showPrevImage);
+
+            // Khi click bên ngoài ảnh, cũng đóng modal
+            lightboxModal.addEventListener("click", function(event) {
+                if (event.target === lightboxModal) {
+                    closeLightbox();
+                }
+            });
+
+            // Thêm sự kiện phím để điều hướng
+            document.addEventListener("keydown", function(event) {
+                if (lightboxModal.style.display === "block") {
+                    if (event.key === "Escape") {
+                        closeLightbox();
+                    } else if (event.key === "ArrowRight") {
+                        showNextImage();
+                    } else if (event.key === "ArrowLeft") {
+                        showPrevImage();
+                    }
+                }
+            });
+        }
+
+        // Gọi hàm khởi tạo lightbox khi DOM loaded
+        document.addEventListener('DOMContentLoaded', function() {
+            // ... các code khác ...
+
+            initializeLightbox();
         });
     </script>
 </body>
