--- a/teacher/Dao-xuan-viet.html
+++ b/teacher/Dao-xuan-viet.html
@@ -124,7 +124,7 @@
                             </div>
                             <div class="contact-text">
                                 <div class="contact-label">Địa chỉ chi nhánh</div>
-                                <div class="contact-value">212 tổ tám quyết thắng, Yên Nghĩa, Hà Đông, Hà Nội</div>
+                                <div class="contact-value">212 Tổ 8 Quyết Thắng, Yên Nghĩa, Hà Đông, Hà Nội</div>
                             </div>
                         </div>
 
