--- a/teacher/Dao-xuan-viet.html
+++ b/teacher/Dao-xuan-viet.html
@@ -905,7 +905,7 @@
             const sampleReviews = [{
                 name: "Nguyễn Văn A",
                 rating: 5,
-                comment: "Thầy Hùng rất nhiệt tình và có phương pháp giảng dạy dễ hiểu. Tôi đã thi đỗ ngay lần đầu tiên! Thầy luôn kiên nhẫn hướng dẫn từng chi tiết nhỏ.",
+                comment: "Thầy Việt rất nhiệt tình và có phương pháp giảng dạy dễ hiểu. Tôi đã thi đỗ ngay lần đầu tiên! Thầy luôn kiên nhẫn hướng dẫn từng chi tiết nhỏ.",
                 date: "15/12/2024"
             }, {
                 name: "Trần Thị B",
