--- a/teacher/Dao-xuan-viet.html
+++ b/teacher/Dao-xuan-viet.html
@@ -903,6 +903,16 @@
         // Add sample reviews on page load
         function addSampleReviews() {
             const sampleReviews = [{
+                name: "Nguyễn Văn N",
+                rating: 5,
+                comment: "Thầy Việt dạy rất tận tâm và chi tiết. Tôi cảm thấy tự tin hơn rất nhiều khi lái xe sau khóa học. Cảm ơn thầy rất nhiều!",
+                date: "15/11/2025"
+            }, {
+                name: "Phạm Thị M",
+                rating: 5,
+                comment: "Khóa học của thầy Việt thật tuyệt vời! Thầy không chỉ giảng dạy kỹ năng lái xe mà còn chia sẻ nhiều kinh nghiệm quý báu. Tôi đã học được rất nhiều điều bổ ích.",
+                date: "15/11/2025"
+            }, {
                 name: "Nguyễn Văn A",
                 rating: 5,
                 comment: "Thầy Việt rất nhiệt tình và có phương pháp giảng dạy dễ hiểu. Tôi đã thi đỗ ngay lần đầu tiên! Thầy luôn kiên nhẫn hướng dẫn từng chi tiết nhỏ.",
