--- a/Teacher.html
+++ b/Teacher.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teacher Taylaimoi</title>
+    <title>CEO Nguyễn Mạnh Hùng - Taylaimoi</title>
     <meta name="description" content="600 Câu Hỏi Sát Hạch Lái Xe 2025 - Ôn thi lý thuyết bằng lái xe hạng B, C1,C, D,D1,D2 với bộ đề chuẩn của Bộ Công An">
     <meta name="keywords" content="thi bằng lái xe, 600 câu hỏi sát hạch, luyện thi lái xe, mẹo thi lý thuyết">
     <meta name="author" content="600 Câu Hỏi Sát Hạch Lái Xe 2025, Taylaimoi.com, taylaimoi2266">
@@ -100,9 +100,9 @@
             <div class="profile-header">
                 <img src="image/Gallery/img (1).webp" alt="Thầy Nguyễn Mạnh Hùng" class="profile-avatar">
                 <h1 class="instructor-name">Thầy Nguyễn Mạnh Hùng</h1>
-                <p class="instructor-title">Giảng viên đào tạo lái xe chuyên nghiệp tại Taylaimoi.com</p>
+                <p class="instructor-title">CEO, Nhà sáng lập thương hiệu Taylaimoi.com</p>
                 <div class="experience-badge">
-                    <i class="fas fa-award"></i> 12 năm kinh nghiệm
+                    <i class="fas fa-award"></i> 12 năm kinh nghiệm đào tạo lái xe
                 </div>
                 <div class="rating-stars">
                     <i class="fas fa-star"></i>
@@ -111,7 +111,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <div class="rating-text">4.7/5 (128 đánh giá)</div>
+                <div class="rating-text">4.9/5 (268 đánh giá)</div>
             </div>
 
             <div class="profile-body">
@@ -184,43 +184,43 @@
                     <h2 class="section-title">Hình Ảnh Giảng Dạy</h2>
                     <div class="gallery-grid">
                         <div class="gallery-item">
-                            <img src="image/Gallery/img (6).webp" alt="Giảng dạy thực hành" class="gallery-img">
-                            <div class="gallery-overlay">Hướng dẫn thực hành</div>
+                            <img src="image/Gallery/img (6).webp" alt="Hình ảnh của thầy Hùng" class="gallery-img">
+                            <div class="gallery-overlay">Hình ảnh của thầy Hùng</div>
                         </div>
 
                         <div class="gallery-item">
-                            <img src="image/Gallery/img (7).webp" alt="Lý thuyết lái xe" class="gallery-img">
-                            <div class="gallery-overlay">Giảng dạy lý thuyết</div>
+                            <img src="image/Gallery/img (7).webp" alt="Hình ảnh của thầy Hùng" class="gallery-img">
+                            <div class="gallery-overlay">Hình ảnh của thầy Hùng</div>
                         </div>
 
                         <div class="gallery-item">
-                            <img src="image/Gallery/img (8).webp" alt="Thi sát hạch" class="gallery-img">
-                            <div class="gallery-overlay">Thi sát hạch</div>
+                            <img src="image/Gallery/img (3.1).webp" alt="Hình ảnh của thầy Hùng" class="gallery-img">
+                            <div class="gallery-overlay">Hình ảnh của thầy Hùng</div>
                         </div>
 
                         <div class="gallery-item">
-                            <img src="image/Gallery/img (9).webp" alt="Học viên thực hành" class="gallery-img">
-                            <div class="gallery-overlay">Học viên thực hành</div>
+                            <img src="image/laisom/Img_laisom2.webp" alt="Hình ảnh của thầy Hùng" class="gallery-img">
+                            <div class="gallery-overlay">Hình ảnh của thầy Hùng</div>
                         </div>
 
                         <div class="gallery-item">
-                            <img src="image/Gallery/img (10).webp" alt="Xe tập lái" class="gallery-img">
-                            <div class="gallery-overlay">Xe tập lái</div>
+                            <img src="image/laisom/Img_laisom3.webp" alt="Hình ảnh của thầy Hùng" class="gallery-img">
+                            <div class="gallery-overlay">Hình ảnh của thầy Hùng</div>
                         </div>
 
                         <div class="gallery-item">
-                            <img src="image/Gallery/img (11).webp" alt="Sa hình" class="gallery-img">
-                            <div class="gallery-overlay">Bài tập sa hình</div>
+                            <img src="image/laisom/Img_laisom5.webp" alt="Hình ảnh của thầy Hùng" class="gallery-img">
+                            <div class="gallery-overlay">Hình ảnh của thầy Hùng</div>
                         </div>
 
                         <div class="gallery-item">
-                            <img src="image/Gallery/img (100).webp" alt="Xe tập lái" class="gallery-img">
-                            <div class="gallery-overlay">Xe tập lái</div>
+                            <img src="image/laisom/Chuongmy/img4.webp" alt="Hình ảnh của thầy Hùng" class="gallery-img">
+                            <div class="gallery-overlay">Hình ảnh của thầy Hùng</div>
                         </div>
 
                         <div class="gallery-item">
-                            <img src="image/Gallery/img (101).webp" alt="Sa hình" class="gallery-img">
-                            <div class="gallery-overlay">Bài tập sa hình</div>
+                            <img src="image/laisom/Chuongmy/img7.webp" alt="Hình ảnh của thầy Hùng" class="gallery-img">
+                            <div class="gallery-overlay">Hình ảnh của thầy Hùng</div>
                         </div>
                     </div>
 
@@ -911,9 +911,34 @@
         // Add sample reviews on page load
         function addSampleReviews() {
             const sampleReviews = [{
+                name: "Nguyễn Văn P",
+                rating: 5,
+                comment: "Thầy Hùng dạy rất tận tình và chu đáo. Tôi đã học lái xe với thầy và cảm thấy rất hài lòng với phương pháp giảng dạy của thầy. Cảm ơn thầy rất nhiều!",
+                date: "11/11/2025"
+            }, {
                 name: "Nguyễn Văn A",
                 rating: 5,
                 comment: "Thầy Hùng rất nhiệt tình và có phương pháp giảng dạy dễ hiểu. Tôi đã thi đỗ ngay lần đầu tiên! Thầy luôn kiên nhẫn hướng dẫn từng chi tiết nhỏ.",
+                date: "01/05/2025"
+            }, {
+                name: "Lê Thị C",
+                rating: 5,
+                comment: "Tôi rất ấn tượng với cách thầy Hùng giảng dạy. Thầy không chỉ truyền đạt kiến thức mà còn tạo động lực cho học viên. Cảm ơn thầy rất nhiều!",
+                date: "10/12/2024"
+            }, {
+                name: "Phạm Văn D",
+                rating: 5,
+                comment: "Khóa học rất bổ ích và thầy Hùng rất tận tâm. Mặc dù có vài lúc tôi cảm thấy khó khăn, nhưng thầy luôn sẵn sàng giúp đỡ. Rất đáng để tham gia!",
+                date: "08/12/2024"
+            }, {
+                name: "Hoàng Minh D",
+                rating: 5,
+                comment: "Tôi rất hài lòng với khóa học lái xe của thầy Hùng. Thầy không chỉ giảng dạy kiến thức mà còn chia sẻ nhiều kinh nghiệm quý báu. Cảm ơn thầy rất nhiều!",
+                date: "15/12/2024"
+            }, {
+                name: "Bùi Đức T",
+                rating: 5,
+                comment: "Thầy Hùng là một giảng viên xuất sắc! Phương pháp dạy của thầy rất hiệu quả và dễ hiểu. Tôi đã học được rất nhiều từ thầy và cảm thấy tự tin hơn khi lái xe trên đường.",
                 date: "15/12/2024"
             }, {
                 name: "Trần Thị B",
