--- a/Teacher.html
+++ b/Teacher.html
@@ -102,7 +102,7 @@
                 <h1 class="instructor-name">Thầy Nguyễn Mạnh Hùng</h1>
                 <p class="instructor-title">CEO, Nhà sáng lập thương hiệu Taylaimoi.com</p>
                 <div class="experience-badge">
-                    <i class="fas fa-award"></i> 12 năm kinh nghiệm đào tạo lái xe
+                    <i class="fas fa-award"></i> 20+ năm kinh nghiệm đào tạo lái xe
                 </div>
                 <div class="rating-stars">
                     <i class="fas fa-star"></i>
