Update image web thay viet

--- a/teacher/Dao-xuan-viet.html
+++ b/teacher/Dao-xuan-viet.html
@@ -184,7 +184,7 @@
                     <h2 class="section-title">Hình Ảnh Giảng Dạy</h2>
                     <div class="gallery-grid">
                         <div class="gallery-item">
-                            <img src="../image/Teacher/Daoxuanviet/Img_thayviet_1.webp" alt="Giảng dạy thực hành" class="gallery-img">
+                            <img src="../image/Teacher/Daoxuanviet/Img_thayviet_cn.jpg" alt="Giảng dạy thực hành" class="gallery-img">
                             <div class="gallery-overlay">Hình ảnh của giảng viên</div>
                         </div>
 
